# pollux

./: .gitignore  .rumdl.toml  Cargo.toml  Dockerfile  README.md  clippy.toml  deny.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/actions/setup-rust/: action.yaml
.github/workflows/: cd-all.yml  cd-docker.yml  cd-docs.yml  cd-rust.yml  ci-all.yml  ci-compliance.yml  ci-docker.yml  ci-docs.yml  ci-rust.yml
crates/pollux/: Cargo.toml
crates/pollux-cli/: Cargo.toml
crates/pollux-cli/src/: main.rs
crates/pollux-core/: Cargo.toml
crates/pollux-core/src/: domain.rs  factory.rs  infra.rs  lib.rs  pollux.rs
crates/pollux-core/src/domain/: analysers.rs  interfaces.rs
crates/pollux-core/src/domain/analysers/: combined.rs  standalone.rs
crates/pollux-core/src/infra/: caching.rs  networking.rs
crates/pollux-core/src/infra/caching/: analysis.rs
crates/pollux-core/src/infra/cli/: parsing.rs  reporter.rs
crates/pollux-core/src/infra/networking/: crates.rs  http.rs  ossrebuild.rs
crates/pollux-core/src/infra/networking/crates/: resolvers.rs  tarballs.rs
crates/pollux-core/src/pollux/: analyser.rs  checker.rs  cleaner.rs
crates/pollux/src/: core.rs  infra.rs  ioc.rs  main.rs  pollux.rs
crates/pollux/src/core/: interfaces.rs  models.rs
crates/pollux/src/core/analysers/: combined.rs  standalone.rs
crates/pollux/src/core/evaluators/: combined.rs  standalone.rs
crates/pollux/src/infra/: caching.rs  cargo.rs  cli.rs  cratesio.rs  ossrebuild.rs  reporting.rs
crates/pollux/src/infra/caching/: analysis.rs  evaluations.rs  filesystem.rs
crates/pollux/src/infra/cli/: feedback.rs  parsing.rs  reporter.rs  troubleshooting.rs
crates/pollux/src/infra/networking/: crates.rs  http.rs  ossrebuild.rs
crates/pollux/src/infra/networking/crates/: cargo.rs  registry.rs  resolvers.rs  tarballs.rs
crates/pollux/src/infra/reporting/: console.rs  html.rs  template.html
crates/pollux/src/pollux/: actors.rs  analyser.rs  checker.rs  cleaner.rs  evaluator.rs  inquirer.rs
crates/pollux/src/pollux/actors/: check.rs  evaluation.rs
crates/pollux/tests/: acceptance.rs  integration.rs
crates/xtasks/: Cargo.toml
crates/xtasks/src/: artifacts.rs  sources.rs
docs/: contributing.md  development.md  readme.md  releasing.md  website.json
