# Copyright 2025 Dotanuki Labs
# SPDX-License-Identifier: MIT

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
authors = ["dotanuki.labs@gmail.com"]
description = "Evaluate trusted publishing and build reproducibility within your Rust supply chain"
repository = "https://github.com/dotanuki-labs/pollux"
homepage = "https://github.com/dotanuki-labs/pollux"
documentation = "https://github.com/dotanuki-labs/pollux"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities", "security"]

[workspace.dependencies]
anyhow = "=1.0.100"
assertor = "=0.0.4"
assert_cmd = "=2.1.1"
better-panic = "=0.3.0"
bytes = "=1.11.0"
camino = "=1.2.2"
cargo-lock = "=11.0.0"
clap = { version = "=4.5.53", features = ["derive"]}
comfy-table = "=7.2.1"
console = "=0.16.2"
decompress = { version = "=0.6.0", default-features = false, features = ["targz"] }
env_logger = "=0.11.8"
hex = "=0.4.3"
httpmock = "=0.8.2"
human-panic = "=2.0.6"
log = "=0.4.29"
minijinja = "=2.14.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.148"
ractor = "=0.15.10"
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls", "charset", "system-proxy", "http2"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.8.0"
packageurl = "=0.6.0"
predicates = "=3.1.3"
sha2 = "=0.10.9"
temp-dir = "=0.1.16"
tikv-jemallocator = "0.6.0"
tokio = { version = "=1.48.0", features = ["full"] }
url = "=2.5.7"
xshell = "=0.2.7"
walkdir = "=2.5.0"

[workspace.lints.rust]
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = "deny"
rust_2018_idioms = "deny"
unsafe_code = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = { level = "deny", priority = -1 }

[workspace.lints.clippy]
todo = "deny"
unimplemented = "deny"
unnested_or_patterns = "deny"
unwrap_used = "deny"
zero_sized_map_values = "deny"


[profile.release]
strip = true
lto = true
codegen-units = 1
