# Copyright 2025 Dotanuki Labs
# SPDX-License-Identifier: MIT

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
authors = ["dotanuki.labs@gmail.com"]
description = "Evaluate trusted publishing and build reproducibility within your Rust supply chain"
repository = "https://github.com/dotanuki-labs/pollux"
homepage = "https://github.com/dotanuki-labs/pollux"
documentation = "https://github.com/dotanuki-labs/pollux"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities", "security"]

[workspace.dependencies]
anyhow = "=1.0.102"
assertor = "=0.0.4"
assert_cmd = "=2.2.0"
better-panic = "=0.3.0"
bytes = "=1.11.1"
camino = "=1.2.2"
cargo-lock = "=11.0.1"
clap = { version = "=4.6.0", features = ["derive"]}
comfy-table = "=7.2.2"
console = "=0.16.3"
decompress = { version = "=0.6.0", default-features = false, features = ["targz"] }
env_logger = "=0.11.10"
hex = "=0.4.3"
httpmock = "=0.8.3"
human-panic = "=2.0.8"
log = "=0.4.29"
minijinja = "=2.19.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
ractor = "=0.15.12"
reqwest = "=0.13.2"
reqwest-middleware = "=0.5.1"
reqwest-retry = "=0.9.1"
packageurl = "=0.6.0"
predicates = "=3.1.4"
sha2 = "=0.11.0"
temp-dir = "=0.2.0"
tikv-jemallocator = "0.6.0"
tokio = { version = "=1.51.1", features = ["full"] }
url = "=2.5.8"
xshell = "=0.2.7"
walkdir = "=2.5.0"

[workspace.lints.rust]
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = "deny"
rust_2018_idioms = "deny"
unsafe_code = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = { level = "deny", priority = -1 }

[workspace.lints.clippy]
todo = "deny"
unimplemented = "deny"
unnested_or_patterns = "deny"
unwrap_used = "deny"
zero_sized_map_values = "deny"


[profile.release]
strip = true
lto = true
codegen-units = 1
