[package]
name = "pollux-core"
description = "Core abstractions for pollux."
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = true

[dependencies]
anyhow.workspace = true
better-panic.workspace = true
bytes.workspace = true
cargo-lock.workspace = true
clap.workspace = true
console.workspace = true
decompress.workspace = true
env_logger.workspace = true
human-panic.workspace = true
log.workspace = true
ractor.workspace = true
packageurl.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
assertor.workspace = true
httpmock.workspace = true
temp-dir.workspace = true
