[package]
name = "pollux"
description = "An opinionated way to kick-off CLI apps powered by Rust"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
better-panic.workspace = true
cargo-lock.workspace = true
clap = { workspace = true, features = ["derive"] }
console.workspace = true
env_logger.workspace = true
futures.workspace = true
human-panic.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tikv-jemallocator.workspace = true
tokio.workspace = true

[dev-dependencies]
assertor.workspace = true
assert_cmd.workspace = true
httpmock.workspace = true
predicates.workspace = true
temp-dir.workspace = true
