[package]
name = "pollux"
description = "Get trusted publishing and build reproducibility insights for your Rust supply chain"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
better-panic.workspace = true
bytes.workspace = true
cargo-lock.workspace = true
clap.workspace = true
comfy-table.workspace = true
console.workspace = true
decompress.workspace = true
env_logger.workspace = true
human-panic.workspace = true
log.workspace = true
minijinja.workspace = true
ractor.workspace = true
packageurl.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
serde.workspace = true
serde_json.workspace = true
tikv-jemallocator.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
assertor.workspace = true
assert_cmd.workspace = true
httpmock.workspace = true
predicates.workspace = true
temp-dir.workspace = true
