[package]
name = "xtasks"
description = "Companion build tasks for pollux"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "help"] }
xshell.workspace = true
walkdir.workspace = true
sha2.workspace = true
hex.workspace = true
